--- a/configure.ac
+++ b/configure.ac
@@ -250,8 +250,6 @@ if test "x$GCC" = "xyes" ; then
   JE_CFLAGS_ADD([-Wsign-compare])
   JE_CFLAGS_ADD([-Wundef])
   JE_CFLAGS_ADD([-Wno-format-zero-length])
-  JE_CFLAGS_ADD([-pipe])
-  JE_CFLAGS_ADD([-g3])
 elif test "x$je_cv_msvc" = "xyes" ; then
   CC="$CC -nologo"
   JE_CFLAGS_ADD([-Zi])
@@ -294,7 +292,6 @@ if test "x$enable_cxx" = "x1" ; then
   if test "x${HAVE_CXX14}" = "x1" ; then
     JE_CXXFLAGS_ADD([-Wall])
     JE_CXXFLAGS_ADD([-Wextra])
-    JE_CXXFLAGS_ADD([-g3])
 
     SAVED_LIBS="${LIBS}"
     JE_APPEND_VS(LIBS, -lstdc++)
@@ -1111,9 +1108,12 @@ AC_SUBST([enable_debug])
 dnl Only optimize if not debugging.
 if test "x$enable_debug" = "x0" ; then
   if test "x$GCC" = "xyes" ; then
-    JE_CFLAGS_ADD([-O3])
-    JE_CXXFLAGS_ADD([-O3])
-    JE_CFLAGS_ADD([-funroll-loops])
+    JE_CFLAGS_ADD([-O2])
+    JE_CXXFLAGS_ADD([-O2])
+    JE_CFLAGS_ADD([-flto])
+    JE_CXXFLAGS_ADD([-flto])
+    JE_CFLAGS_ADD([-fno-fat-lto-objects])
+    JE_CXXFLAGS_ADD([-fno-fat-lto-objects])
   elif test "x$je_cv_msvc" = "xyes" ; then
     JE_CFLAGS_ADD([-O2])
     JE_CXXFLAGS_ADD([-O2])
