--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,8 @@ test/include/test/jemalloc_test_defs.h
 /msvc/projects/*/*/Release*/
 /msvc/projects/*/*/Win32/
 /msvc/projects/*/*/x64/
+
+build
+build-win
+install
+.vscode 
