Export target so that this can stand as a submodule.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -94,7 +94,7 @@ foreach(sym ${JEMALLOC_CMAKE_SOURCES})
     # - only rebuild symbols for changed files (makes CMake output cluttered)
     # - rebuild all symbols when any source file changes (nicer CMake output
     #   for end users, but shows each symbol extract line on every source change)
-    set(EXTRACT_PER_FILE OFF)
+    set(EXTRACT_PER_FILE ON)
 
     # There are two ways of generating the symbol files and the
     # above feature toggle EXTRACT_PER_FILE controls which we're attempting:
@@ -243,6 +243,7 @@ endif()
 # (also so we don't compile twice for both -static and -shared)
 add_library(${PROJECT_NAME} OBJECT ${JEMALLOC_CMAKE_SOURCES})
 add_dependencies(${PROJECT_NAME} ${PROJECT_NAME}-syms)
+set(JEMALLOC_MODULE_TARGET ${PROJECT_NAME} PARENT_SCOPE)
 
 # Enable lto if not debug build.
 if(CMAKE_BUILD_TYPE STREQUAL "Debug" OR CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
