Disable sbrk for windows.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -88,7 +88,7 @@ file(MAKE_DIRECTORY "${PROJECT_BINARY_DIR}/src/syms/")
 foreach(sym ${JEMALLOC_CMAKE_SOURCES})
     get_filename_component(filename ${sym} NAME)
     if(WIN32)
-        set(obj ${filename}.c.obj)
+        set(obj ${filename}.obj)
         set(objectDir "${PROJECT_BINARY_DIR}/src/CMakeFiles/${dir}")
     else()
         set(obj ${filename}.o)
